# Candle

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  renderer.rs  utilities.rs
src/app/: gui_renderer.rs  main_renderer.rs
src/app/main_renderer/: renderer_utils.rs  texture.rs  vertex.rs
src/shaders/: shader.wgsl
