[package]
name = "candle"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.29.1",features = ["winit"] }
egui-winit = "0.29.1"
winit = "0.30.5"
pollster = "0.3.0"
anyhow = "1.0.0"
env_logger = "0.10.0"
bytemuck = {version = "1.22.0", features = ["derive"]}
image = {version = "0.25.6", default-features = false, features = ["png", "jpeg"]}